# simple-service

./: Dockerfile  Procfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 4aa26642beba_initial_migration.py
api/: conftest.py  crud.py  db.py  main.py  main_test.py  models.py
